change top link to github repo

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       </a>
 
       <div class="bf-header-text-store-wrapper">
-         <a target="_blank" href="https://www.ifixit.com/Store">
+         <a target="_blank" href="https://github.com/tvler/ifixit-black-friday">
             <span class="bf-text bf-header-text-store">
-               Shop iFixit
+               View on GitHub
             </span>
          </a>
       </div>
